[package]
name = "queryable-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.57"
base64 = "0.13.0"
bytes = "1.2.1"
chrono = "0.4.22"
common-multipart-rfc7578 = "0.6.0"
datafusion = "12.0.0"
futures = "0.3.24"
hyper = "0.14.20"
hyper-rustls = "0.23.0"
ipfs-api-backend-hyper = { version = "0.5.0", features = ["with-send-sync", "with-builder", "with-hyper-rustls"] }
log = "0.4.17"
object_store = "0.5.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.13"
thiserror = "1.0.36"
validator = { version = "0.16.0", features = ["derive", "validator_derive"] }
ipfs-api-prelude = { version = "0.5.0", features = ["with-send-sync"] }

[dependencies.tokio]
version = "1.18"
features = [
    "sync",
    "macros",
    "parking_lot",
    "rt-multi-thread",
    "time",
    "io-util",
]
